argocd/applications/huly/transactor/transactor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: transactor
  name: transactor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactor
  template:
    metadata:
      labels:
        app: transactor
    spec:
      volumes:
        - configMap:
            name: huly-healthcheck-scripts
          name: healthcheck-scripts
      containers:
        - env:
            - name: ACCOUNTS_URL
              value: http://account
            - name: FULLTEXT_URL
              value: http://fulltext
            - name: FRONT_URL
              valueFrom:
                configMapKeyRef:
                  name: huly-config
                  key: FRONT_URL
            - name: STATS_URL
              value: http://stats
            - name: STORAGE_CONFIG
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: STORAGE_CONFIG
            - name: COCKROACH_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: COCKROACH_PASSWORD
            - name: COCKROACH_DB_URL
              value: "postgres://selfhost:$(COCKROACH_PASSWORD)@cockroach-public:26257/defaultdb"
            - name: DB_URL
              value: "$(COCKROACH_DB_URL)?sslmode=require"
            - name: SERVER_CURSOR_MAXTIMEMS
              value: "30000"
            - name: SERVER_PORT
              value: "3333"
            - name: SERVER_SECRET
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: SERVER_SECRET
            - name: QUEUE_CONFIG
              value: kafka-kafka-brokers.kafka.svc.cluster.local:9093
          image: hardcoreeng/transactor:v0.7.375
          name: transactor
          ports:
            - containerPort: 3333
              protocol: TCP
          startupProbe:
            exec:
              command:
                - node
                - /opt/huly-healthchecks/transactor-ready.js
            failureThreshold: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - node
                - /opt/huly-healthchecks/transactor-ready.js
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /opt/huly-healthchecks
              name: healthcheck-scripts
              readOnly: true
      restartPolicy: Always
